hphp/test/quick/impl_abstract_dv_ia.php.expectf
HipHop Fatal error: Declaration of B::a() must be compatible with that of A::a() in %s on line 3
